@@ -20,6 +20,7 @@ Changelog
     - [Bugfix] Let the fluid caller finder find simple strings.
     - [Bugfix] Possible warning in file reader.
     - [Bugfix] Possible fatals in the file reader.
+    - [Bugfix] Do not use the $GLOBALS recursion marker in PHP 8.1 or higher.
 
 5.0.2
     - [Feature] Added the possibility for plugins to overwrite the factory settings.
